--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 .background-image {
-    background-image: url('/FUNDO2.png');
+    background-image: url('FUNDO2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
